Fixed footer, is now stuck to the bottom of the page. If it moves again, I'm getting my 12 gague

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   background-image: url(http://globalmedicalco.com/photos/globalmedicalco/2/8604.jpg);
   position: relative;
-  height: 100vh;
+  height: 100%;
 }
 
 /*Navbar style */
@@ -184,7 +184,7 @@ div.merchCard img {
   padding: 0;
   margin-top: 1em;
   margin-left: 21em;
-  margin-bottom: 5em;
+  margin-bottom: 8em;
   overflow: auto;
   color: rgb(179, 170, 170);
   background-color: rgba(38, 41, 44, 0.708);
@@ -203,7 +203,13 @@ footer {
   background-color: rgba(38, 41, 44, 0.708);
 }
 
+#merchandise {
+  padding-bottom: 42em;
+}
 
+#albumCards {
+  padding-bottom: 3em;
+}
 
 .twitter, .instagram, .fclass {
   float: left;
@@ -237,27 +243,3 @@ footer {
 
 /* Break Points  */
 
-@media (min-width: 800px) {
-  #historyText {
-    margin: 0 auto;
-    margin-top: 1em;
-    margin-bottom: 5em;
-  }
-}
-
-@media (min-width: 600px) {
-  #historyText {
-    margin: 0 auto;
-    margin-top: 1em;
-    margin-bottom: 5em;
-  }
-}
-
-@media (min-width: 400px) {
-
-  #historyText {
-    margin: 0 auto;
-    margin-top: 1em;
-    margin-bottom: 5em;
-  }
-}
